--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "commander": "^12.1.0",
+    "crypto-js": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.408.0",
@@ -24,6 +25,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-qr-code": "^2.0.15",
     "react-toastify": "^10.0.5",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
@@ -32,6 +34,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
