--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.7",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
     "@types/react": "^18",
