--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-qr-code": "^2.0.15",
     "react-toastify": "^10.0.5",
     "sqlite": "^5.1.1",
