--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "commander": "^12.1.0",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "jose": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
