--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@handcash/handcash-sdk": "^0.0.2-alpha.6",
+    "@handcash/handcash-connect": "^0.8.10",
+    "@handcash/handcash-sdk": "^0.0.4",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -18,8 +19,10 @@
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@tabler/icons-react": "^3.17.0",
+    "@tabler/icons-react": "^3.30.0",
+    "@types/bcryptjs": "^2.4.6",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "commander": "^12.1.0",
@@ -32,11 +35,11 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.408.0",
     "moment": "^2.30.1",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "pg": "^8.12.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-confetti": "^6.1.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-qr-code": "^2.0.15",
     "react-toastify": "^10.0.5",
